feat(Transfer): add api doc
